--- a/src/app/layout/automation/automation.component.html
+++ b/src/app/layout/automation/automation.component.html
@@ -1,12 +1,17 @@
 <app-page-header [heading]="'Automation'" [icon]="'fa-magic'"></app-page-header>
-
+<div class="alert alert-primary">
+    Currently supported exchanges for automation: {{ supportedExchanges.join() }}
+</div>
 <div class="card mb-3" *ngFor="let exchange of exchanges">
     <div class="card-header">
         <div class="row justify-content-between align-items-center px-2">
             <span>{{ exchange.name }}</span>
-            <a [routerLink]="['/automation/make-strategy-execution', exchange.name]" class="btn btn-success">
+            <a *ngIf="isSupported(exchange.name)" [routerLink]="['/automation/make-strategy-execution', exchange.name]" class="btn btn-success">
                 Add strategy
             </a>
+            <button *ngIf="!isSupported(exchange.name)" class="btn btn-secondary" disabled>
+                Add strategy
+            </button>
         </div>
     </div>
     <table *ngIf="getStrategiesExecutionsByExchangeName(exchange.name).length > 0"
