--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -31,23 +31,23 @@
                     <thead>
                     <tr>
                         <th>Currency</th>
-                        <th>Available</th>
-                        <th>Frozen</th>
-                        <th>Total</th>
-                        <th>BTC Price</th>
-                        <th>BTC value <i class="fa fa-sort-amount-desc" aria-hidden="true"></i></th>
-                        <th>USD value</th>
+                        <th class="text-right">Available</th>
+                        <th class="text-right">Frozen</th>
+                        <th class="text-right">Total</th>
+                        <th class="text-right">BTC Price</th>
+                        <th class="text-right">BTC value <i class="fa fa-sort-amount-desc" aria-hidden="true"></i></th>
+                        <th class="text-right">USD value</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr *ngFor="let currencyBalance of getSortedBalances(exchangeBalance.currencyBalances)">
                         <td class="sensitive-data">{{ currencyBalance.currencyCode }}</td>
-                        <td class="sensitive-data">{{ currencyBalance.available }}</td>
-                        <td class="sensitive-data">{{ currencyBalance.frozen }}</td>
-                        <td class="sensitive-data">{{ currencyBalance.total | number : '1.8-8' }}</td>
-                        <td class="sensitive-data">{{ currencyBalance.btcPrice | number : '1.8-8' }}</td>
-                        <td class="sensitive-data">{{ currencyBalance.btcValue | number : '1.8' || '-' }}</td>
-                        <td class="sensitive-data">{{ currencyBalance.usdValue | number : '1.2' || '-' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.available | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.frozen | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.total | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.btcPrice | number : '1.8-8' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.btcValue | number : '1.8' || '-' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.usdValue | number : '1.2' || '-' }}</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -55,10 +55,10 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td class="font-weight-bold sensitive-data">
+                        <td class="text-right font-weight-bold sensitive-data">
                             {{ getTotalExchangeBtcValue(exchangeBalance) | number : '1.8' }}
                         </td>
-                        <td class="font-weight-bold sensitive-data">
+                        <td class="text-right font-weight-bold sensitive-data">
                             {{ getTotalExchangeUsdValue(exchangeBalance) | number : '1.2' }}
                         </td>
                     </tr>
