Add userName in bitstamp keys edit view

--- a/src/app/layout/clients/client-edit/client-edit.component.html
+++ b/src/app/layout/clients/client-edit/client-edit.component.html
@@ -36,6 +36,11 @@
 
                             <div ngModelGroup="exchangesKeys">
 
+                                <fieldset *ngIf="exchange.name === 'bitstamp'" class="form-group" [ngModelGroup]="exchange.id">
+                                    <label>User name</label>
+                                    <input class="form-control" name="userName" ngModel>
+                                </fieldset>
+
                                 <fieldset class="form-group" [ngModelGroup]="exchange.id">
                                     <label>API Key</label>
                                     <input class="form-control" name="apiKey" ngModel>
