--- a/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
+++ b/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
@@ -58,11 +58,11 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="exitCurrencyPercentageForBuying">Exit Currency Percentage For Buying</label>
+                        <label for="counterCurrencyPercentageForBuying">Counter Currency Percentage For Buying</label>
                         <div class="input-group">
-                            <input name="exitCurrencyPercentageForBuying" type="number" class="form-control" min="0.1"
-                                   max="100" [value]="exitCurrencyFractionForBuying * 100"
-                                   (input)="onExitCurrencyPercentageForBuying($event.target)">
+                            <input name="counterCurrencyPercentageForBuying" type="number" class="form-control" min="0.1"
+                                   max="100" [value]="counterCurrencyFractionForBuying * 100"
+                                   (input)="onCounterCurrencyPercentageForBuying($event.target)">
                             <div class="input-group-append">
                                 <span class="input-group-text">%</span>
                             </div>
@@ -71,11 +71,11 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="maxExitCurrencyPercentForBuying">Max Exit Currency Percent For Buying</label>
+                        <label for="maxCounterCurrencyPercentForBuying">Max Counter Currency Percent For Buying</label>
                         <div class="input-group">
-                            <input name="maxExitCurrencyPercentForBuying" type="number" class="form-control" min="0.1"
-                                   max="100" [value]="maxExitCurrencyPercentForBuying"
-                                   (input)="onMaxExitCurrencyPercentForBuying($event.target)">
+                            <input name="maxCounterCurrencyPercentForBuying" type="number" class="form-control" min="0.1"
+                                   max="100" [value]="maxCounterCurrencyPercentForBuying"
+                                   (input)="onMaxCounterCurrencyPercentForBuying($event.target)">
                             <div class="input-group-append">
                                 <span class="input-group-text">%</span>
                             </div>
