--- a/src/app/layout/automation/make-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
+++ b/src/app/layout/automation/make-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-md-6">
         <div class="form-group">
-            <label for="maxBuyPrice">Max buy price</label>
-            <input name="maxBuyPrice" type="text" class="form-control" value="0" (input)="onMaxBuyPrice($event.target)"
+            <label for="minSellPrice">Min sell price</label>
+            <input name="maxBuyPrice" type="text" class="form-control" value="0" (input)="onMinSellPrice($event.target)"
                    required>
         </div>
     </div>
     <div class="col-md-6">
         <div class="form-group">
-            <label for="dropToBuyNextRelativePercent">Drop to buy next</label>
+            <label for="growToSellNextRelativePercent">Grow to sell next</label>
             <div class="input-group">
                 <input name="dropToBuyNextRelativePercent" class="form-control" type="number" min="0.1" max="50"
-                       value="0.5" step="0.1" (input)="onDropToBuyNextRelativePercent($event.target)">
+                       value="0.5" step="0.1" (input)="onGrowToSellNextRelativePercent($event.target)">
                 <div class="input-group-append">
                     <span class="input-group-text">%</span>
                 </div>
