Use number instead of string for min/maxSellPrice

--- a/src/app/layout/automation/make-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
+++ b/src/app/layout/automation/make-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-6">
         <div class="form-group">
             <label for="maxBuyPrice">Max buy price</label>
-            <input name="maxBuyPrice" type="text" class="form-control" value="0" (input)="onMaxBuyPrice($event.target)"
+            <input name="maxBuyPrice" type="number" class="form-control" value="0.0" (input)="onMaxBuyPrice($event.target)"
                    required>
         </div>
     </div>
