--- a/src/app/layout/automation/make-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
+++ b/src/app/layout/automation/make-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-6">
         <div class="form-group">
             <label for="minSellPrice">Min sell price</label>
-            <input name="maxBuyPrice" type="text" class="form-control" value="0" (input)="onMinSellPrice($event.target)"
+            <input name="maxBuyPrice" type="number" class="form-control" value="0.0" (input)="onMinSellPrice($event.target)"
                    required>
         </div>
     </div>
