Add SellNow strategy behind toggle

--- a/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
+++ b/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
@@ -127,6 +127,10 @@
             *ngIf="selectedStrategy == 'SellWhenSecondCurrencyGrows'"
             (specificParametersChanged)="onSpecificParameters($event)">
         </app-sell-when-second-currency-grows-specific-parameters>
+        <app-sell-now-parameters
+            *ngIf="selectedStrategy == 'SellNow'"
+            (specificParametersChanged)="onSpecificParameters($event)">
+        </app-sell-now-parameters>
 
     </div>
     <div *ngIf="clients.length > 1" class="col-md-6">
