--- a/src/app/layout/orders/orders.component.html
+++ b/src/app/layout/orders/orders.component.html
@@ -1,7 +1,7 @@
 <div>
     <app-page-header [heading]="'Open orders'" [icon]="'fa-calendar'"></app-page-header>
 
-    <div class="card mb-3">
+    <div class="card mb-3 bg-dark">
         <div class="card-header">
             Orders
             <button class="btn btn-info" (click)="loadData()" [disabled]="pending">
