--- a/src/app/layout/clients/clients.component.html
+++ b/src/app/layout/clients/clients.component.html
@@ -1,6 +1,6 @@
 <app-page-header [heading]="'Users'" [icon]="'fa-users'"></app-page-header>
 
-<div class="card mb-3">
+<div class="card mb-3 bg-dark">
     <div class="card-header">Users and exchange keys</div>
     <div *ngIf="!isLoading && clients.length == 0" class="alert alert-primary">
         Start with adding your first user, that might be your name and then assign exchange keys
