--- a/src/app/layout/settings/watched-currency-pairs/watched-currency-pairs.component.html
+++ b/src/app/layout/settings/watched-currency-pairs/watched-currency-pairs.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3">
+<div class="card mb-3 bg-dark">
   <div class="card-header">Watched currency pairs</div>
   <div class="card-body">
 
