--- a/src/app/shared/modules/page-header/page-header.component.html
+++ b/src/app/shared/modules/page-header/page-header.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xl-12">
-        <h2 class="page-header">
+        <h2 class="page-header text-light">
             {{heading}}
         </h2>
         <!--<ol class="breadcrumb">-->
