--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -1,18 +1,24 @@
 <div [@routerTransition]>
     <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
-    <div class="card mb-3 bg-dark">
-        <button class="btn btn-info" (click)="fetchPrices()" [disabled]="pendingPriceRefresh">
-            <i class="fa fa-refresh" [class.is-pending]="pendingPriceRefresh"></i> Refresh prices
-        </button>
-        <p>Last prices refresh: {{ getLastPriceRefreshTime() | date: 'y-MM-dd HH:mm:ss' || '-' }}</p>
-    </div>
-    <ng-container *ngIf="!pendingPriceRefresh">
+    <ng-container>
         <div *ngFor="let client of clients" class="card mb-3 bg-dark">
-            <h3>{{ client.name }}</h3>
-            <button class="btn btn-info" (click)="fetchExchangeBalancesForClient(client)" [disabled]="pending">
-                <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh amounts
-            </button>
-            <p>Last refresh: {{ getLastClientWalletRefreshTime(client) | date: 'y-MM-dd HH:mm:ss' || '-' }}</p>
+            <div class="card-header d-flex flex-column">
+                <div class="d-flex flex-row mb-2">
+                    <h3>{{ client.name }}</h3>
+                    <div class="text-muted ml-auto mr-3">Last amounts refresh: {{ getLastClientWalletRefreshTime(client) |
+                        date: 'y-MM-dd HH:mm:ss' || '-' }}</div>
+                    <button class="btn btn-info" style="min-width: 170px;" (click)="fetchExchangeBalancesForClient(client)" [disabled]="pending">
+                        <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh amounts
+                    </button>
+                </div>
+                <div class="d-flex flex-row">
+                    <div class="text-muted ml-auto mr-3">Last prices refresh: {{ getLastPriceRefreshTime() |
+                        date: 'y-MM-dd HH:mm:ss' || '-' }}</div>
+                    <button class="btn btn-info" style="min-width: 170px;" (click)="fetchPrices()" [disabled]="pendingPriceRefresh">
+                        <i class="fa fa-refresh" [class.is-pending]="pendingPriceRefresh"></i> Refresh prices
+                    </button>
+                </div>
+            </div>
             <p><i class="fa fa-btc"></i> Total BTC:
                 <span class="sensitive-data">{{ getTotalClientBtcValue(client) | number : '1.8' || '-' }}</span>
             </p>
@@ -46,8 +52,10 @@
                         <td class="text-right sensitive-data">{{ currencyBalance.frozen | number : '1.8-8' }}</td>
                         <td class="text-right sensitive-data">{{ currencyBalance.total | number : '1.8-8' }}</td>
                         <td class="text-right sensitive-data">{{ currencyBalance.btcPrice | number : '1.8-8' }}</td>
-                        <td class="text-right sensitive-data">{{ currencyBalance.btcValue | number : '1.8' || '-' }}</td>
-                        <td class="text-right sensitive-data">{{ currencyBalance.usdValue | number : '1.2' || '-' }}</td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.btcValue | number : '1.8' || '-' }}
+                        </td>
+                        <td class="text-right sensitive-data">{{ currencyBalance.usdValue | number : '1.2' || '-' }}
+                        </td>
                     </tr>
                     <tr>
                         <td></td>
