Rename client components to exchange user, change routing to /exchange-users

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard' | translate }}
         </a>
 
-        <a routerLink="/clients" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a routerLink="/exchange-users" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Users & API keys' | translate }}
         </a>
 
