--- a/src/app/layout/exchange-users/exchange-user-delete/exchange-user-delete.component.html
+++ b/src/app/layout/exchange-users/exchange-user-delete/exchange-user-delete.component.html
@@ -1,18 +1,18 @@
 <ng-template #content let-c="close" let-d="dismiss">
-  <div class="modal-header">
-      <h4 class="modal-title">Delete client confirmation</h4>
-      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-          <span aria-hidden="true">&times;</span>
-      </button>
-  </div>
-  <div class="modal-body">
-      <p>
-        You're about to deleting the client: <strong>{{ client.name }}</strong><br>
-        Proceed?
-      </p>
-  </div>
-  <div class="modal-footer">
-      <button type="button" class="btn btn-danger" (click)="c('delete')">Yes. I am sure.</button>
-      <button type="button" class="btn btn-secondary" (click)="d('Dismiss')">Dismiss</button>
-  </div>
+    <div class="modal-header">
+        <h4 class="modal-title">Delete client confirmation</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <p>
+            Are you sure you want to delete exchange user <br>
+            <strong>{{ exchangeUser.name }}</strong>?
+        </p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-danger" (click)="c('delete')">Yes</button>
+        <button type="button" class="btn btn-secondary" (click)="d('Dismiss')">Dismiss</button>
+    </div>
 </ng-template>
